fichier externe en javaScript

--- a/exos/addition.html
+++ b/exos/addition.html
@@ -8,6 +8,8 @@
   <script src="addition.js"></script>
 </head>
 <body>
-  <button type="button" onclick="addition();">Additionner</button>
+  <!-- <button type="button" onclick="addition();">Additionner</button> -->
+  <button type="button" onclick="addition3(50,40);">Additionner3</button>
+  <button type="button" onclick="addition3(20,10);">Additionner4</button>
 </body>
 </html>
