--- a/exos/addition.html
+++ b/exos/addition.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exos JavaScript 01</title>
-  <script src="addition.js"></script>
+  <script src="js/addition.js"></script>
 </head>
+
 <body>
-  <button type="button" onclick="addition1(50,40);">Additionner1</button>
-  <button type="button" onclick="addition1(20,10);">Additionner2</button>
+  
 </body>
 </html>
